--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@iarna/toml": "^2.2.5",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
