fix: move Vite to dependencies for Netlify build compatibility
🔧 Critical Build Fix:
- Moved vite and @vitejs/plugin-react-swc from devDependencies to dependencies
- This resolves the 'vite: not found' error on Netlify (exit code 127)
- Simplified netlify.toml build command back to 'npm run build'
- Verified build process works locally after changes

✅ Netlify Compatibility:
- Netlify often has issues with build tools in devDependencies
- Moving Vite to regular dependencies ensures it's available during build
- This is a common pattern for Vite deployments on Netlify
- Build command simplified for better reliability

🚀 Production Ready:
- Build process tested and verified locally
- Configuration optimized for Netlify deployment
- Should resolve the exit code 127 build failure
- Ready for successful deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  # Build command with explicit dependency installation
-  command = "npm install && npm run build"
+  # Build command (Vite moved to dependencies for Netlify compatibility)
+  command = "npm run build"
 
   # Directory to publish (Vite builds to 'dist' by default)
   publish = "dist"
