--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,13 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dev-dist
 *.local
+
+# Environment variables
+.env
+.env.*
+!.env.example
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +28,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Sensitive files
+*.key
+*.pem
+*.p12
+*.pfx
+config/secrets.json
+
+# OS generated files
+Thumbs.db
+.DS_Store?
+ehthumbs.db
+Icon?
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
