--- a/package.json
+++ b/package.json
@@ -92,8 +92,11 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.3",
     "vaul": "^0.9.3",
     "vite": "^5.4.1",
+    "vite-plugin-pwa": "^1.0.0",
+    "workbox-window": "^7.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -108,9 +111,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite-plugin-pwa": "^1.0.0",
-    "workbox-window": "^7.3.0"
+    "typescript-eslint": "^8.0.1"
   }
 }
